TODO MVC 코드 기반 버그 수정중

--- a/todomvc-app/index.html
+++ b/todomvc-app/index.html
@@ -4,17 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>1px.js • TodoMVC</title>
-	<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
-	<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+	<!--<link rel="stylesheet" href="node_modules/todomvc-common/base.css">-->
+	<!--<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">-->
 	<!-- CSS overrides - remove if you don't need it -->
 	<link rel="stylesheet" href="css/app.css">
-	
+
 	<script src="../js4/observable.js"></script>
 	<script src="../js4/module.js"></script>
 	<script src="../js4/watch.js"></script>
 	<script src="../js4/expression.js"></script>
 	<script src="../js4/compile.js"></script>
 	<script src="../js4/component.js"></script>
+	<script src="../js4/util.js"></script>
 
 </head>
 <body>
@@ -24,11 +25,11 @@
 		<section class="todoapp">
 			<header class="header">
 				<h1>todos</h1>
-				<form (submit)="addTodo('aaa')">
+				<form (submit)="addTodo($form.newTodo.value)" $form>
 					<input name="newTodo" class="new-todo" placeholder="What needs to be done?" autofocus>
 				</form>
 			</header>
-			
+
 			<!-- This section should be hidden by default and shown when there are todos -->
 			<section class="main" [hidden]="todos.length === 0">
 				<input id="toggle-all" class="toggle-all" type="checkbox" [(checked)]="allMarked" (change)="toggleAll(allMarked)">
@@ -40,17 +41,17 @@
 							<label (dblclick)="setEditingTodo(todo)">{{ todo.title }}</label>
 							<button class="destroy" (click)="removeTodoByIndex(index)"></button>
 						</div>
-						<form #form (submit)="applyTodo(todo, title)">
-							<input name="title" class="edit" [(value)]="tempTitle" (blur)="form.submit()" focus()="todo === editingTodo">
+						<form $form2 (submit)="applyTodo(todo, editingTodo.title)">
+							<input name="title" class="edit" [(value)]="editingTodo.title" (blur)="$form2.submit()" focus()="todo === editingTodo">
 						</form>
 					</li>
 				</ul>
 			</section>
-			
+
 			<!-- This footer should hidden by default and shown when there are todos -->
 			<footer class="footer">
 				<!-- This should be `0 items left` by default -->
-				<span class="todo-count"><strong>{{ num_items_left$ }}</strong> item{{'s' | if: num_items_left$ > 1}} left</span>
+				<span class="todo-count"><strong>{{ num_items_left$ || 0 }}</strong> items left</span>
 				<!-- Remove this if you don't implement routing -->
 				<ul class="filters">
 					<li>
@@ -64,13 +65,15 @@
 					</li>
 				</ul>
 				<!-- Hidden if no completed items are left ↓ -->
-				<button class="clear-completed" [hidden]="num_completed_items$ === 0" (click)="clearCompleted()">Clear completed</button>
+				<button class="clear-completed" [hidden]="num_items_left$ > 0" (click)="clearCompleted()">Clear completed</button>
 			</footer>
 		</section>
 	</template>
 	<script>module.component("todo-app", function() {
 		return {
 			init: function() {
+				window.app = this;
+
 				this.todos = [
 					{
 						title: "123",
@@ -85,41 +88,44 @@
 						completed: false
 					}
 				];
-				
+
 				this.allMarked = false;
 				this.editingTodo = null;
-				
-				this.num_items_left$ = this.watch$("todos as todo if !todo.completed").count();
+
+				this.watch$("todos as todo if !todo.completed").count();
 				this.num_completed_items$ = this.watch$("todos.length - num_items_left");
 			},
-			
+
 			addTodo: function(title) {
-//				this.todos.push({
-//					title: "Taste JavaScript",
-//					completed: false,
-//				});
+				this.todos.push({
+					title: title,
+					completed: false,
+				});
+
+				this.$form.newTodo.value = "";
 			},
-			
+
 			toggleAll: function(allMarked) {
 				this.todos.forEach(function(todo) {
 					todo.completed = allMarked;
 				});
 			},
-			
+
 			removeTodoByIndex: function(index) {
 				this.todos.splice(index, 1);
 			},
-			
+
 			setEditingTodo: function(todo) {
 				this.editingTodo = todo;
 			},
-			
+
 			applyTodo: function(todo, title) {
 				todo.title = title;
+				this.editingTodo = null;
 			},
-			
+
 			clearCompleted: function() {
-				this.todos = this.todos.filter(function(todo) {
+				this.todos = this.todos.slice().filter(function(todo) {
 					return !todo.completed;
 				});
 			}
@@ -130,7 +136,7 @@
 <todo-app></todo-app>
 
 <!-- Scripts here. Don't remove ↓ -->
-<script src="node_modules/todomvc-common/base.js"></script>
+<!--<script src="node_modules/todomvc-common/base.js"></script>-->
 <script src="js/app.js"></script>
 </body>
 </html>
