Observable Base로 전면 수정 가자~

--- a/bak/new2/index.html
+++ b/bak/new2/index.html
@@ -27,7 +27,7 @@
 
 
 /*
-(OK) parse.js에서 $watch로 거는 개별 콜백이 동일한 형태(self.uncahce) 이므로 callbacks를 제거할 수 있다.
+(OK) expression.js에서 $watch로 거는 개별 콜백이 동일한 형태(self.uncahce) 이므로 callbacks를 제거할 수 있다.
  (OK): self.path를 생성하는 과정에서 old_path를 체크할수 있고 map삭제가 가능하다는 것을 의미한다.
  (OK): self.path를 생성하는 과정에서 {path: token} 형태의 테이블을 생성하고 new path에 대해서 uncache()하는 형태로 callback을 제거한다.
  @TODO: map, {path:token}, $scope를 한 큐에 처리하는 방법을 고민한다.
