--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="js4/observable.js"></script>
 	<script src="js4/module.js"></script>
 	<script src="js4/watch.js"></script>
-	<script src="js4/expression.js"></script>
+	<script src="js4/parse.js"></script>
 	<script src="js4/compile.js"></script>
 	<script src="js4/component.js"></script>
 </head>
