--- a/module.html
+++ b/module.html
@@ -13,6 +13,11 @@
 
 
 <h1>{{ title }}</h1>
+<h1>{{ title }}</h1>
+<h1>{{ title }}</h1>
+
+<h2>{{ c$ }}</h2>
+
 
 <ul>
     <li *repeat="arr as a, index">hello~~ {{ a }} {{ index }}</li>
@@ -24,6 +29,9 @@
     b.title = "asdflkjaslkdfjlksadfas";
 
     b.arr = ["A", "B", "C", "D", "E"];
+
+    b.c$ = Observable.interval(500).map(i => i);
+
 
     $compile(b);
 
