--- a/bak/old/promise.html
+++ b/bak/old/promise.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<script src="1px.module.js"></script>
-	<!--<script src="1px.core.js"></script>-->
+	<!--<script src="1px.core.js0"></script>-->
 	<script src="../lib/1px.promise.js"></script>
 </head>
 <body style="white-space: pre">
