--- a/1px.html
+++ b/1px.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="js4/observable.js"></script>
-	<script src="js4/watch.js"></script>
-	<script src="js4/module.js"></script>
-	<script src="js4/parse.js"></script>
-	<script src="js4/compile.js"></script>
+	<script src="js/observable.js"></script>
+	<script src="js/watch.js"></script>
+	<script src="js/module.js"></script>
+	<script src="js/parse.js"></script>
+	<script src="js/compile.js"></script>
 </head>
 <body>
 
