--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<script src="js4/observable.js"></script>
-	<script src="js4/module.js"></script>
-	<script src="js4/watch.js"></script>
-	<script src="js4/parse.js"></script>
-	<script src="js4/compile.js"></script>
-	<script src="js4/component.js"></script>
+	<script src="js/observable.js"></script>
+	<script src="js/module.js"></script>
+	<script src="js/watch.js"></script>
+	<script src="js/parse.js"></script>
+	<script src="js/compile.js"></script>
+	<script src="js/component.js"></script>
 </head>
 
 <body>
