--- a/todomvc-app/index.html
+++ b/todomvc-app/index.html
@@ -9,13 +9,13 @@
 	<!-- CSS overrides - remove if you don't need it -->
 	<link rel="stylesheet" href="css/app.css">
 
-	<script src="../js4/observable.js"></script>
-	<script src="../js4/module.js"></script>
-	<script src="../js4/watch.js"></script>
-	<script src="../js4/parse.js"></script>
-	<script src="../js4/compile.js"></script>
-	<script src="../js4/component.js"></script>
-	<script src="../js4/util.js"></script>
+	<script src="../js/observable.js"></script>
+	<script src="../js/module.js"></script>
+	<script src="../js/watch.js"></script>
+	<script src="../js/parse.js"></script>
+	<script src="../js/compile.js"></script>
+	<script src="../js/component.js"></script>
+	<script src="../js/util.js"></script>
 
 </head>
 <body>
@@ -193,7 +193,7 @@
 
 
 <!-- Scripts here. Don't remove ↓ -->
-<!--<script src="node_modules/todomvc-common/base.js"></script>-->
+<!--<script src="node_modules/todomvc-common/base.js0"></script>-->
 <script src="js/app.js"></script>
 </body>
 </html>
